--- a/_posts/2022-01-26-eslint.md
+++ b/_posts/2022-01-26-eslint.md
@@ -128,7 +128,7 @@ module.exports = {
 {: file=".eslintrc.js" }
 <!-- prettier-ignore-end -->
 
-이제 위 린트 설정 파일을 보면, 네 가지 플러그인을 불러오고, 여섯 가지 패키지를 적용하고, 몇 가지 규칙은 직접 추가해서 변경했다는 것을 이해할 수 있습니다.
+이제 위 린트 설정 파일을 보면, 네 가지 플러그인을 불러오고, 여섯 가지 패키지를 적용하고, 몇 가지 규칙은 직접 추가해서 변경한다는 것을 이해할 수 있습니다.
 
 ## See also
 
