--- a/_posts/2022-01-26-eslint.md
+++ b/_posts/2022-01-26-eslint.md
@@ -128,7 +128,13 @@ module.exports = {
 {: file=".eslintrc.js" }
 <!-- prettier-ignore-end -->
 
-이제 위 린트 설정 파일을 보면, 네 가지 플러그인을 불러오고, 여섯 가지 패키지를 적용하고, 몇 가지 규칙은 직접 추가해서 변경한다는 것을 이해할 수 있습니다.
+이제 위 린트 설정 파일을 보면,
+
+- `plugins`: 네 개의 플러그인이 갖고 있는 린트 규칙 모음을 활용하겠구나
+- `extends`: 여섯 가지 패키지의 규칙 모음을 위에서부터 아래로 바로 적용하고, 규칙뿐만 아니라 다른 ESLint 설정도 불러오는구나
+- `rules`: 몇 가지 규칙은 직접 추가해서 변경하는구나
+
+라고 이해할 수 있습니다.
 
 ## See also
 
