--- a/_posts/2022-01-26-eslint.md
+++ b/_posts/2022-01-26-eslint.md
@@ -17,7 +17,7 @@ mermaid: true
 
 ## 용어 정리
 
-아래 용어를 잘 파악하면 ESLint 설정이 어떤 구조를 동작하는지 알 수 있습니다. 앞으로 글에서 말하는 `린트`는 `ESLint`를 의미하고 `린트 설정 객체`는 `.eslintrc.js`에서 내보내는 자바스크립트 객체를 의미합니다.
+용어를 이해하면 ESLint 설정이 어떤 구조로 동작하는지 대략적으로 알 수 있습니다. 앞으로 글에서 말하는 `린트`는 `ESLint`를 의미하고 `린트 설정 객체`는 `.eslintrc.js`에서 내보내는 자바스크립트 객체를 의미합니다.
 
 **ESLint 패키지:**
 
@@ -33,12 +33,12 @@ mermaid: true
 | 용어 | {::nomarkdown} <div style="width:290px"> 뜻 </div> {:/}| 자주 사용하는 값 | 비고 |
 | :---: | :--- | :---: | :---: |
 | root | {::nomarkdown}<li>린트를 적용할 프로젝트의 루트가 현재 린트 설정 파일과 동일한 레벨에 있다</li> <li>따라서 부모 디렉토리는 린팅 대상에 포함하지 않는다</li> {:/} | `true` 또는 생략 |
-| [env](https://eslint.org/docs/user-guide/configuring/language-options#specifying-environments) | {::nomarkdown}<li>프로젝트가 실행될 환경 정의</li> <li>각 환경에 맞는 전역 변수를 사전에 제공한다</li> {:/} | `{ browser: true, es2021: true, node: true, jest: true }` | `es*` 값을 사용하면 파서 옵션의 `ecmaVersion`도 자동으로 설정된다 |
-| [parser](https://eslint.org/docs/user-guide/configuring/plugins#specifying-parser) | {::nomarkdown}<li>ESLint가 사용할 파서 정의</li> <li>타입스크립트의 경우 `@typescript-eslint/parser`를 사용한다</li> {:/} |
-| [parserOptions](https://eslint.org/docs/user-guide/configuring/language-options#specifying-parser-options) | {::nomarkdown}<li>프로젝트에서 사용할 자바스크립트 언어 옵션 정의</li> {:/} | `{ "sourceType": "module", "ecmaFeatures": { "jsx": true } }` |
-| [parserOptions.project](https://github.com/typescript-eslint/typescript-eslint/tree/main/packages/parser#parseroptionsproject) | {::nomarkdown}<li>(`@typescript-eslint`에서 제공하는) 타입 정보를 필요로 하는 규칙들을 사용하려면 설정해야 하는 속성</li> {:/} | `"./tsconfig.json"` | `.js` 확장자 파일을 읽을 때 에러가 발생할 수 있다 {::nomarkdown} </br> {:/} 따라서 이 경우에는 [타입스크립트 규칙은 타입스크립트 파일에만 적용하도록 오버라이드](https://stackoverflow.com/a/64488474) 할 수 있다 |
-| [plugins](https://eslint.org/docs/user-guide/configuring/plugins#configuring-plugins) | {::nomarkdown}<li>ESLint 설정에 사용할 플러그인을 불러온다</li> <li>규칙을 불러올 뿐 자동으로 적용되지는 않는다</li> {:/} | `["@typescript-eslint"]` |
-| [extends](https://eslint.org/docs/user-guide/configuring/configuration-files#extending-configuration-files) | {::nomarkdown}<li>상속 받을 다른 ESLint 설정 파일 정의</li> <li>`recommended` 같은 키워드를 사용하면 패키지에 정의된 프리셋 규칙이 일괄 적용된다</li> {:/} | [예제 코드](https://github.com/datalater/react-boilerplate/blob/main/.eslintrc.js#L9) | 나중에 정의한 값이 더 높은 우선순위를 갖는다 |
+| [env](https://eslint.org/docs/user-guide/configuring/language-options#specifying-environments) | {::nomarkdown}<li>프로젝트가 실행될 환경을 정의한다</li> <li>각 환경에 맞는 전역 변수를 사전에 제공한다</li> {:/} | `{ browser: true, es2021: true, node: true, jest: true }` | `es*` 값을 사용하면 파서 옵션의 `ecmaVersion`도 자동으로 설정된다 |
+| [parser](https://eslint.org/docs/user-guide/configuring/plugins#specifying-parser) | {::nomarkdown}<li>ESLint가 사용할 파서를 정의한다</li> <li>타입스크립트의 경우 `@typescript-eslint/parser`를 사용한다</li> {:/} |
+| [parserOptions](https://eslint.org/docs/user-guide/configuring/language-options#specifying-parser-options) | {::nomarkdown}<li>프로젝트에서 사용할 자바스크립트 언어 옵션을 정의한다</li> {:/} | `{ "sourceType": "module", "ecmaFeatures": { "jsx": true } }` |
+| [parserOptions.project](https://github.com/typescript-eslint/typescript-eslint/tree/main/packages/parser#parseroptionsproject) | {::nomarkdown}<li>(`@typescript-eslint`에서 제공하는) 타입 정보를 필요로 하는 린트 규칙을 적용하려면 설정해야 한다</li> {:/} | `"./tsconfig.json"` | `.js` 확장자 파일을 읽을 때 에러가 발생할 수 있다 {::nomarkdown} </br> {:/} 따라서 이 경우에는 [타입스크립트 규칙은 타입스크립트 파일에만 적용하도록 오버라이드](https://stackoverflow.com/a/64488474) 할 수 있다 |
+| [plugins](https://eslint.org/docs/user-guide/configuring/plugins#configuring-plugins) | {::nomarkdown}<li>ESLint 설정에 사용할 플러그인을 불러온다</li> <li>규칙을 불러올 뿐 자동으로 **적용되지는 않는다**</li> {:/} | `["@typescript-eslint"]` |
+| [extends](https://eslint.org/docs/user-guide/configuring/configuration-files#extending-configuration-files) | {::nomarkdown}<li>상속 받아서 **바로 적용**할 다른 ESLint 설정 파일을 정의한다</li> <li>`recommended` 같은 키워드를 사용하면 패키지에 정의된 프리셋 규칙이 일괄 적용된다</li> {:/} | [예제 코드](https://github.com/datalater/react-boilerplate/blob/main/.eslintrc.js#L9) | 나중에 정의한 값이 더 높은 우선순위를 갖는다 |
 
 ## ESLint 설정 파일 예제
 
@@ -130,9 +130,9 @@ module.exports = {
 
 이제 위 린트 설정 파일을 보면,
 
-- `plugins`: 네 개의 플러그인이 갖고 있는 린트 규칙 모음을 활용하겠구나
-- `extends`: 여섯 가지 패키지의 규칙 모음을 위에서부터 아래로 바로 적용하고, 규칙뿐만 아니라 다른 ESLint 설정도 불러오는구나
-- `rules`: 몇 가지 규칙은 직접 추가해서 변경하는구나
+- `plugins`: '네 개의 플러그인이 갖고 있는 린트 규칙 모음을 활용하겠구나'
+- `extends`: '여섯 가지 패키지의 규칙 모음을 위에서부터 아래로 바로 적용하고, 규칙뿐만 아니라 다른 ESLint 설정도 불러오는구나'
+- `rules`: '몇 가지 규칙은 직접 추가해서 변경하는구나'
 
 라고 이해할 수 있습니다.
 
