SEO 개선을 위해 exceprt separator를 활용하여 description 수동 지정

--- a/_posts/2022-01-10-hoisting.md
+++ b/_posts/2022-01-10-hoisting.md
@@ -9,11 +9,14 @@ image:
   height: 100 # in pixels
   alt: JavaScript
 mermaid: true
+excerpt_separator: <!--end-of-description-->
 ---
 
 ## 목표
 
 자바스크립트의 호이스팅이 무엇인지 질문과 답변 형태로 설명합니다.
+
+<!--end-of-description-->
 
 ## Q1. 호이스팅이 무엇인가요?
 
