--- a/_posts/2022-01-26-eslint.md
+++ b/_posts/2022-01-26-eslint.md
@@ -2,18 +2,21 @@
 title: ESLint 설정 뜯어보기 (feat. React, TypeScript)
 date: 2022-01-26
 categories: [TIL]
-tags: [eslint] # TAG names should always be lowercase
+tags: [eslint, 리액트] # TAG names should always be lowercase
 image:
   src: https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1599890132/noticon/c9dgkhp3m5rxmzn3fnp9.png
   width: 100 # in pixels
   height: 100 # in pixels
   alt: ESLint
 mermaid: true
+excerpt_separator: <!--end-of-description-->
 ---
 
 ## 목표
 
 리액트와 타입스크립트를 쓰는 프로젝트에서 자주 사용하는 ESLint 설정을 정리합니다.
+
+<!--end-of-description-->
 
 ## 용어 정리
 
